--- a/src/main/resources/static/manage/adminIsDelList.html
+++ b/src/main/resources/static/manage/adminIsDelList.html
@@ -80,7 +80,7 @@
                     minWidth: 120,
                 }, {
                     field: 'adminName',
-                    title: '管理员名称(点击修改)',
+                    title: '管理员名称',
                     edit: 'text',
                     width: '15%',
                     minWidth: 120,
