--- a/src/main/resources/static/manage/customerList.html
+++ b/src/main/resources/static/manage/customerList.html
@@ -40,7 +40,7 @@
         </form>
     </div>
 
-    <button class="layui-btn" id="add">添加顾客</button>
+    <button class="layui-btn layui-btn-normal" id="add">添加顾客</button>
     <button class="layui-btn" onclick="javascript:location.reload();">
         <i class="layui-icon layui-icon-refresh-3"></i>
     </button>
@@ -195,7 +195,7 @@
         $('#add').click(function () {
             layer.open({
                 type: 2,
-                content: ['foodAdd.html'],
+                content: ['customerAdd.html'],
                 area: ['500px', '350px'],
                 move: false,
                 shade: 0.5,
