--- a/src/main/resources/static/front/confirmOrder.html
+++ b/src/main/resources/static/front/confirmOrder.html
@@ -88,6 +88,7 @@
 
 <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
 <script type="text/javascript" src="lib/layui/layui.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 <script>
     layui.use(['layer'], function () {
         const path = location.protocol + "//" + window.location.host + "/starryfood";
