--- a/src/main/resources/static/front/editPersonInfo.html
+++ b/src/main/resources/static/front/editPersonInfo.html
@@ -70,6 +70,7 @@
 
 <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="lib/layui/layui.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript">
     layui.use(['layer'], function () {
         const path = location.protocol + "//" + window.location.host + "/starryfood";
