--- a/src/main/resources/static/front/foodDetail.html
+++ b/src/main/resources/static/front/foodDetail.html
@@ -91,6 +91,8 @@
     </footer>
 </div>
 <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+<script type="text/javascript" src="lib/layui/layui.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 
 <script>
     const path = location.protocol + "//" + window.location.host + "/starryfood";
