--- a/src/main/resources/static/manage/foodList.html
+++ b/src/main/resources/static/manage/foodList.html
@@ -29,9 +29,9 @@
     <div class="demoTable">
         <form id="editForm" class="layui-form">
             <div class="layui-form-item layui-inline">
-                <label class="layui-form-label must">顾客账号</label>
+                <label class="layui-form-label must">菜品名称</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="keyName" id="keyName" required placeholder="请输入顾客账号"
+                    <input type="text" name="keyName" id="keyName" required placeholder="请输入菜品名称"
                            autocomplete="off" class="layui-input">
                 </div>
             </div>
@@ -39,6 +39,10 @@
                 <div class="layui-btn" data-type="reload" id="search">搜索</div>
             </div>
         </form>
+        <button type="button" class="layui-btn layui-btn-normal" id="add">添加菜品</button>
+        <button class="layui-btn" onclick="javascript:location.reload();">
+            <i class="layui-icon layui-icon-refresh-3"></i>
+        </button>
     </div>
 
     <table id="allFood" lay-filter="allFood"></table>
@@ -46,8 +50,8 @@
 
 
 <script type="text/html" id="barDemo">
-    <a class="layui-btn" lay-event="update">修改</a>
-    <a class="layui-btn layui-btn-danger" lay-event="delete">删除</a>
+    <a class="layui-btn layui-btn-sm" lay-event="update">修改</a>
+    <a class="layui-btn layui-btn-danger layui-btn-sm" lay-event="delete">删除</a>
 </script>
 <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="lib/layui/layui.js"></script>
@@ -196,6 +200,18 @@
                     });
                 })
             }
+        })
+
+        // 点击添加菜品
+        $('#add').click(function () {
+            layer.open({
+                type: 2,
+                content: ['foodAdd.html'],
+                area: ['500px', '350px'],
+                move: false,
+                shade: 0.5,
+                shadeClose: true,//点击遮罩关闭
+            });
         })
     })
 </script>
