--- a/src/main/resources/static/manage/foodListByKind.html
+++ b/src/main/resources/static/manage/foodListByKind.html
@@ -33,8 +33,8 @@
 
 
 <script type="text/html" id="barDemo">
-    <a class="layui-btn" lay-event="update">修改</a>
-    <a class="layui-btn layui-btn-danger" lay-event="delete">删除</a>
+    <a class="layui-btn layui-btn-sm" lay-event="update">修改</a>
+    <a class="layui-btn layui-btn-danger layui-btn-sm" lay-event="delete">删除</a>
 </script>
 <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="lib/layui/layui.js"></script>
@@ -53,13 +53,20 @@
             toolbar: 'default',
             loading: true, //翻页加loading
             url: path + '/food/getFoodsByKind?foodKindId=' + foodKindId, //数据接口(不需要带项目名)
-            parseData: function (res) { //res 即为原始返回的数据
-                return {
-                    "code": res.code, //解析接口状态
-                    "msg": res.msg, //解析提示文本
-                    "count": res.data.size, //解析数据长度
-                    "data": res.data.list, //解析数据列表
-                };
+            parseData: function (res) {
+                if (res.code == 431) {
+                    return {
+                        "code": res.code, //解析接口状态
+                        "msg": res.msg, //解析提示文本
+                        "count": res.data.size, //解析数据长度
+                        "data": res.data.list, //解析数据列表
+                    };
+                }else{
+                    layer.msg(`${res.msg}`, {
+                        time: 1500,
+                    })
+                }
+
             },
             response: {
                 statusCode: 431 //规定成功的状态码，默认：0
@@ -124,38 +131,6 @@
             limits: [10, 20, 30, 50, 80],
             limit: 10, //每页默认显示的数量
             id: "dataTable"
-        });
-
-        // 数据重载（查询）
-        const active = {
-            reload: function () {
-                //执行重载
-                table.reload('dataTable', {
-                    url: path + '/customer/getByCustomerId',
-                    parseData: function (res) { //res 即为原始返回的数据
-                        return {
-                            "code": res.code, //解析接口状态
-                            "msg": res.msg, //解析提示文本
-                            "count": 1, //解析数据总个数
-                            "data": [res.data], //解析数据列表
-                        };
-                    },
-                    response: {
-                        statusCode: 331 //规定成功的状态码，默认：0
-                    },
-                    page: {
-                        curr: 1 //重新从第 1 页开始
-                    },
-                    where: { //类似于 data
-                        customerId: $('#customerId').val()
-                    }
-                });
-            }
-        };
-        // 数据重载之后的刷新重载表格
-        $('#search').on('click', function () {
-            const type = $(this).data('type');
-            active[type] ? active[type].call(this) : '';
         });
 
         //监听行工具事件
